--- a/pictorial/package.json
+++ b/pictorial/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +14,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "dayjs": "^1.11.10",
+    "heroicons": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -46,6 +49,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "typescript": "^4.5.4"
   }
 }
