--- a/pictorial/tsconfig.json
+++ b/pictorial/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,13 +17,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-			"@src/*": ["./*"],
-			"@redux/*": ["./redux/*"],
+      "@src/*": ["./*"],
+      "@redux/*": ["./redux/*"],
       "@config/*": ["./config/*"],
-      "@pages/*": ["./pages/*"],
-		},
+      "@pages/*": ["./pages/*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
